--- a/people.html
+++ b/people.html
@@ -324,7 +324,7 @@
                         <img class="seers-people-img" src="./people_files/juan.png">
                         <div class="seers-people-name"><a target="_blank" href="http://www.utdallas.edu/~jflorez">Juan Manuel Florez</a></div>
 												<div class="seers-people-degree">Ph.D. (2022)</div>
-												<div class="seers-people-job">Industry</div>
+												<div class="seers-people-job">at CQSE America</div>
                     </div>
 										<div class="seers-people">
                         <img class="seers-people-img" src="./people_files/oscar.png">
